@@ -1,4 +1,4 @@
-/* Copyright (C) 2002, 2003 Free Software Foundation, Inc.
+/* Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -20,18 +20,65 @@
 #include <sched.h>
 #include <string.h>
 #include <sysdep.h>
+#include <unistd.h>
 #include <sys/types.h>
+#include <shlib-compat.h>
 
 
 #ifdef __NR_sched_setaffinity
+static size_t __kernel_cpumask_size;
+
+
 int
-sched_setaffinity (pid, cpuset)
-     pid_t pid;
-     const cpu_set_t *cpuset;
+__sched_setaffinity_new (pid_t pid, size_t cpusetsize, const cpu_set_t *cpuset)
 {
-  return INLINE_SYSCALL (sched_setaffinity, 3, pid, sizeof (cpu_set_t),
-			 cpuset);
+  if (__builtin_expect (__kernel_cpumask_size == 0, 0))
+    {
+      INTERNAL_SYSCALL_DECL (err);
+      int res;
+
+      size_t psize = 128;
+      void *p = alloca (psize);
+
+      while (res = INTERNAL_SYSCALL (sched_getaffinity, err, 3, getpid (),
+				     psize, p),
+	     INTERNAL_SYSCALL_ERROR_P (res, err)
+	     && INTERNAL_SYSCALL_ERRNO (res, err) == EINVAL)
+	p = extend_alloca (p, psize, 2 * psize);
+
+      if (res == 0 || INTERNAL_SYSCALL_ERROR_P (res, err))
+	{
+	  __set_errno (INTERNAL_SYSCALL_ERRNO (res, err));
+	  return -1;
+	}
+
+      __kernel_cpumask_size = res;
+    }
+
+  /* We now know the size of the kernel cpumask_t.  Make sure the user
+     does not request to set a bit beyond that.  */
+  for (size_t cnt = __kernel_cpumask_size; cnt < cpusetsize; ++cnt)
+    if (((char *) cpuset)[cnt] != '\0')
+      /* Found a nonzero byte.  This means the user request cannot be
+	 fulfilled.  */
+      return EINVAL;
+
+  return INLINE_SYSCALL (sched_setaffinity, 3, pid, cpusetsize, cpuset);
 }
+versioned_symbol (libc, __sched_setaffinity_new, sched_setaffinity,
+		  GLIBC_2_3_4);
+
+
+# if SHLIB_COMPAT(libc, 2_3_3, 2_3_4)
+int
+attribute_compat_text_section
+__sched_setaffinity_old (const pthread_attr_t *attr, const cpu_set_t *cpuset)
+{
+  /* The old interface by default assumed a 1024 processor bitmap.  */
+  return __sched_setaffinity_new (attr, 128, cpuset);
+}
+compat_symbol (libc, __sched_setaffinity_old, sched_setaffinity, GLIBC_2_3_3);
+# endif
 #else
 # include <sysdeps/generic/sched_setaffinity.c>
 #endif
